# velo

./: .gitignore  .pre-commit-config.yaml  CLEANUP-REPORT.md  CLEANUP-SUMMARY.md  DESIGN_MIGRATION.md  DIAGRAMS-ANALYSIS.md  README.md  VELO-Anti-Patterns.md  VELO-Backend-Tasks.md  VELO-Backend.md  VELO-Code-Review-v2.md  VELO-Data-Consistency-Semaphores.md  VELO-Database-Schema.mermaid  VELO-Design-Document.md  VELO-Frontend-Specification.md  VELO-Frontend-TZ-Final.md  VELO-Frontend.md  VELO-LLM-Code-Review-Guide.md  VELO-Payment-System-Meeting.md  VELO-Payment-System.md  VELO-Technical-Specification.md  Zodd_review.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  audit.py  config.py  database.py  exceptions.py  logging.py  middleware.py  mixins.py  periods.py  redis.py  telegram_links.py
backend/app/modules/: __init__.py
backend/app/modules/admin/: __init__.py  router.py  schemas.py  service.py
backend/app/modules/ai/: __init__.py  interface.py  mock.py  router.py  schemas.py
backend/app/modules/auth/: auth__init__.py  auth_dependencies.py  auth_schemas.py  auth_service.py  dependencies.py  router.py  schemas.py  service.py
backend/app/modules/bookings/: __init__.py  autofinalize.py  models.py  router.py  schemas.py  service.py
backend/app/modules/diary/: checkins_service.py  feed_service.py  insights_service.py  models.py  projections.py  router.py  schemas.py  service.py
backend/app/modules/masters/: __init__.py  finance_router.py  finance_schemas.py  finance_service.py  groups_models.py  groups_router.py  groups_schemas.py  groups_service.py  models.py  reviews_router.py  reviews_schemas.py  reviews_service.py  router.py  schemas.py  service.py  stats_router.py  stats_schemas.py  stats_service.py  students_router.py  students_schemas.py  students_service.py
backend/app/modules/notifications/: __init__.py  formatters.py  models.py  processor.py  reminders.py  service.py  template_engine.py
backend/app/modules/payments/: __init__.py  models.py  purchase.py  purchase_router.py  refund.py  router.py  schemas.py  service.py  stripe.py  webhook_router.py
backend/app/modules/practices/: __init__.py  audience_service.py  cancel_service.py  enrichment_service.py  listing_service.py  models.py  router.py  schemas.py  series_service.py  service.py  taxonomy_models.py  taxonomy_router.py
backend/app/modules/promos/: __init__.py  models.py  (+4 more)
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 2026_02_08_59cdef354a01_create_users_table.py  2026_02_08_d73160716a56_create_users_table.py  2026_02_10_a1b2c3d4e5f6_create_master_profiles.py  2026_02_12_add_practice_pricing.py  2026_02_12_b2c3d4e5f6a7_create_reports_table.py  2026_02_12_c3d4e5f6a7b8_create_practices_table.py  2026_02_12_d4e5f6a7b8c9_add_practice_pricing.py  2026_02_12_e5f6a7b8c9d0_create_bookings_table.py  2026_02_12_f6a7b8c9d0e1_create_waitlist_table.py  2026_02_13_a0b1c2d3e4f5_create_audit_logs_table.py  2026_02_13_b1c2d3e4f5a6_create_ledger_tables.py  2026_02_13_c2d3e4f5a6b7_unify_balance_columns_to_cents.py  2026_02_13_d3e4f5a6b7c8_create_payments_table.py  2026_02_13_e4f5a6b7c8d9_create_purchases_table.py  2026_02_17_f5a6b7c8d9e0_booking_partial_unique_index.py  2026_02_18_0a1b2c3d4e5f_add_fk_indexes.py  2026_02_18_a1b2c3d4e5f6_add_fk_indexes.py  2026_02_18_a7b8c9d0e1f2_add_index_booking_purchase_id.py  2026_02_18_b8c9d0e1f2a3_create_withdrawals_table.py  2026_02_20_c9d0e1f2a3b4_add_withdrawals_checks_and_admin_idx.py  2026_02_21_d0e1f2a3b4c5_create_promos_and_update_purchases.py  2026_02_21_e1f2a3b4c5d6_add_purchase_discount_check_constraints.py  2026_02_22_e1f2a3b4c5d6_create_notifications_tables.py  2026_02_22_f2a3b4c5d6e7_create_notifications_tables.py  2026_02_22_f3a4b5c6d7e8_create_notifications_tables.py  2026_02_28_0a1b2c3d4e5f_restrict_financial_fks.py  2026_02_28_a1b2c3d4e5f6_restrict_financial_fks.py  2026_02_28_a8b1c2d3e4f5_create_checkins_table.py  2026_02_28_b9c2d3e4f5a6_create_feedbacks_table.py  2026_02_28_c0d1e2f3a4b5_create_diary_entries_table.py  2026_03_10_d1e2f3a4b5c6_add_ck_checkin_check_type.py  2026_03_10_d2f3a4b5c6e7_add_ix_practices_status_scheduled_at.py  2026_03_10_e2f3a4b5c6d7_normalize_practice_currency.py  2026_03_11_f3a4b5c6d7e8_unique_booking_purchase_id.py  2026_03_21_e2f3a4b5c6d7_add_what_to_prepare_contraindications.py  2026_05_22_b2c3d4e5f6a8_add_data_jsonb_to_practices.py  2026_05_25_c4d5e6f7a8b9_diary_feed_redesign.py  2026_05_27_d5e6f7a8b9c0_mood_rating_to_score.py  2026_05_28_e6f7a8b9c0d1_taxonomy_v2.py  2026_06_10_f7a8b9c0d1e2_add_checkin_skipped_to_bookings.py  (+15 more)
backend/scripts/: generate_ts_types.py  normalize_master_methods.py  repair_orphaned_debits.py  repair_semaphore_2x.py  repair_topup_company_ledger.py  seed.py  seed_practices.json  seed_practices.py  set_role.py
backend/scripts/seed_scenarios/: 526738615.json  8457062539.json  default.json  master-test.json  pipeline-2.json  product.json  super-active.json
backend/tests/: conftest.py  helpers.py  overview_service.py  test_admin_consistency.py  test_admin_masters.py  test_admin_metrics.py  test_admin_participants.py  test_admin_practices.py  test_admin_promos.py  test_admin_reports.py  test_admin_revenue.py  test_admin_stats.py  test_admin_stats_overview.py  test_admin_taxonomy.py  test_admin_users.py  test_admin_withdrawals.py  test_ai_summary.py  test_attendance.py  test_audit.py  test_auth.py  test_bookings.py  test_cancellation.py  test_checkins.py  test_config.py  test_config_role_switch_warning.py  test_diary_entries.py  test_diary_feed.py  test_enrichment_e1_e12.py  test_exception_handlers.py  test_feedbacks.py  test_finalize_attendance_checkin.py  test_health.py  test_insights.py  test_ledger.py  test_master_confirmed_taxonomy.py  test_master_finance.py  test_master_groups.py  test_master_invite.py  test_master_languages.py  test_master_method_change.py  (+38 more)
(+1083 files in other folders)
