# =============================================================================
# VELO Backend — Project Configuration
# =============================================================================
#
# Single source of truth for dependencies and tool configuration.
# All versions are pinned with upper bounds to prevent breaking changes.
# =============================================================================

[project]
name = "velo-backend"
version = "0.1.0"
description = "VELO — Platform for wellness practice facilitators"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "redis[hiredis]>=5.0.0,<6.0",
    "alembic>=1.13.0,<2.0",
    "pydantic-settings>=2.5.0,<3.0",
    "structlog>=24.0.0,<25.0",
    "email-validator>=2.0.0,<3.0"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "httpx>=0.27.0,<1.0",
    # Linting (ruff replaces black + flake8 + isort)
    "ruff>=0.7.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # bugbear
    "SIM",    # simplify
    "RUF",    # ruff-specific
    "ASYNC",  # async linting
]
ignore = ["RUF012", "B008"]

[tool.ruff.format]
# ruff format replaces black — same style, faster.
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
cache_dir = "/tmp/.pytest_cache"
